Fixed issue-48 favicon not showing

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Messenger - Chat App"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="128x128" href="%PUBLIC_URL%/apple-touch-icon.png">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
